# SearchEngine

./: .gitignore  CMakeLists.txt  ConverterJSON.h  LICENSE  README.md  SearchServer.h  config.json  file001.txt  file002.txt  main.cpp  requests.json  test.cpp
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  InvertedIndex.h  SearchServer.cpp
test/: CMakeLists.txt  test.cpp
